--- a/lib/startup_script.mustache
+++ b/lib/startup_script.mustache
@@ -1,5 +1,55 @@
 #!/usr/bin/env bash
 set -x
+declare -r maxretry=10
+declare -r waittime=5
+declare retrycounter=0
+ 
+function retry_wrapper() {
+  local cmd=$1 ; shift
+  retry $cmd "$@"
+  local s=$?
+  retrycounter=0
+  return $s
+}
+ 
+function retry() {
+  set +o errexit
+  local cmd=$1 ; shift
+  $cmd "$@"
+  local s=$?
+  if [ $s -ne 0 -a $retrycounter -lt $maxretry ] ; then
+    retrycounter=$(($retrycounter+1))
+    echo "Retrying"
+    sleep $((1+$retrycounter*$retrycounter*$waittime))
+    retry $cmd "$@"
+  fi
+
+  return $s
+}
+
+function copy_startup_log () {
+  startup_script_log=gs://dart-carte-du-jour/build_logs/`hostname`-startupscript.log
+  gsutil cp /var/log/startupscript.log $startup_script_log
+  status=$?
+  
+  if [[ $status != 0 ]] ; then
+    echo "Failed to copy /var/log/startupscript.log $startup_script_log $status"
+  fi
+}
+
+# TODO(adam): move functionality into dart scripts instead of shell scripts. 
+function shutdown_instance () {
+  copy_startup_log
+
+  export AUTOSHUTDOWN=$(curl http://metadata/computeMetadata/v1beta1/instance/attributes/autoshutdown)
+  
+  if [[ $AUTOSHUTDOWN -eq "1" ]]; then
+    hostname=`uname -n`
+    echo "Deleting instance ......... $hostname"
+    retry_wrapper gcutil deleteinstance -f --delete_boot_pd --zone us-central1-a $hostname
+  fi 
+}
+
 sed -i '1i Port 443' /etc/ssh/sshd_config 
 /etc/init.d/ssh restart
 export DARTSDK=$(curl http://metadata/computeMetadata/v1beta1/instance/attributes/dartsdk)
@@ -8,3 +58,5 @@ export VERSION=$(curl http://metadata/computeMetadata/v1beta1/instance/attribute
 export MODE=$(curl http://metadata/computeMetadata/v1beta1/instance/attributes/mode)
 sudo -E -H -u {{user_name}} bash -c 'gsutil cp -r gs://dart-carte-du-jour/configurations/github_private_repo_pull ~/ && cd ~/github_private_repo_pull && bash ./clone_project.sh'
 sudo -E -H -u {{user_name}} bash -c 'source /etc/profile && cd ~/github_private_repo_pull/dart-carte-du-jour && pub install && dart {{dart_application}}'
+
+shutdown_instance
