making shell script verbose

--- a/lib/startup_script.mustache
+++ b/lib/startup_script.mustache
@@ -24,14 +24,12 @@ function retry() {
   return $s
 }
 function copy_startup_log () {
+  set -x
   startup_script_log=gs://dart-carte-du-jour/build_logs/`hostname`-startupscript.log
-  gsutil cp /var/log/startupscript.log $startup_script_log
-  status=$?
-  if [[ $status != 0 ]] ; then
-    echo "Failed to copy /var/log/startupscript.log $startup_script_log $status"
-  fi
+  retry_wrapper gsutil cp /var/log/startupscript.log $startup_script_log
 }
 function shutdown_instance () {
+  set -x
   copy_startup_log
   export AUTOSHUTDOWN=$(curl http://metadata/computeMetadata/v1beta1/instance/attributes/autoshutdown) 
   if [[ $AUTOSHUTDOWN -eq "1" ]]; then
