--- a/bin/dartdocs_index.html.mustache
+++ b/bin/dartdocs_index.html.mustache
@@ -1,20 +1,54 @@
 <html>
 <head>
 <title>www.dartdocs.org</title>
+<style>
+.navbar {
+  background: #fff;
+  height: 65px;
+  line-height: 65px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  -webkit-box-shadow: 0px 2px 2px rgba(50, 50, 50, 0.15);
+  -moz-box-shadow: 0px 2px 2px rgba(50, 50, 50, 0.15);
+  box-shadow: 0px 2px 2px rgba(50, 50, 50, 0.15);
+}
+.navbar a {
+  background-image: url(https://api.dartlang.org/apidocs/channels/stable/dartdoc-viewer/static/dart-logo.png);
+  background-repeat: no-repeat;
+  display: inline-block;
+  background-position: 10px 18px;
+  padding: 8px 0 0 140px;
+  color: #777777;
+  text-decoration: none;
+}
+dl { margin-top: 75px; }
+dt {
+  font-weight: bold;
+  padding-top: 1em;
+}
+dt:first-child { padding-top: 0; }
+dd { word-spacing: 0.5em; }
+dd a {
+  color: #428bca;
+  text-decoration: none;
+}
+dd a:hover, dd a:focus {
+  color: #2a6496;
+  text-decoration: underline;
+}
+</style>
 </head>
 <body>
-  <table>
-    <caption>Packages</caption>
-    <tr>
-      <th>Name</th>
-      <th>Versions</th>
-    </tr>
+  <div class="navbar">
+    <a href="/" class="navbar-brand header-logo">Packages API Reference</a>
+  </div>
+  <dl>
 {{#packages}}
-    <tr>
-      <td>{{name}}</td>
-      <td>{{#versions}}<a href="{{url}}">{{version}}</a> {{/versions}}</td>
-    </tr>
+    <dt>{{name}}</dt>
+    <dd>{{#versions}}<a href="{{url}}">{{version}}</a> {{/versions}}</dd>
 {{/packages}}
-  </table>
+  </dl>
 </body>
 </html>
