--- a/bin/dartdocs_index.html.mustache
+++ b/bin/dartdocs_index.html.mustache
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>www.dartdocs.org</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .navbar {
   background: #fff;
