--- a/bin/dartdocs_failed_index.html.mustache
+++ b/bin/dartdocs_failed_index.html.mustache
@@ -1,10 +1,24 @@
 <html>
-<head>
-<title>failed to build</title>
-</head>
-<body>
-{{#docsUrls}}
-  <a href="{{url}}">{{name}} {{version}}</a><br/>
-{{/docsUrls}}
-</body>
+  <head>
+    <title>Build failures</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  </head>
+  <body>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/history/index.html">Build history</a></li>
+          <li class="active"><a href="/failed/index.html">Build failures</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      {{#docsUrls}}
+        <a href="{{url}}">{{name}} {{version}}</a><br/>
+      {{/docsUrls}}
+    </div>
+  </body>
 </html>
