Adding analytics to index.html, history.html, failed.html

--- a/bin/dartdocs_history_index.html.mustache
+++ b/bin/dartdocs_history_index.html.mustache
@@ -3,6 +3,16 @@
     <title>Build History</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-51687523-1', 'dartdocs.org');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
