--- a/bin/dartdocs_index.html.mustache
+++ b/bin/dartdocs_index.html.mustache
@@ -15,6 +15,10 @@
     </script>
   </head>
   <body>
+    <!-- TODO(adam): remove after end of tech preview -->
+    <p class="bg-danger text-center" style="padding: 0px; margin: 0px 0px 0px;">
+      <em><strong>Technology preview</strong></em>
+    </p>  
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
