--- a/bin/dartdocs_index.html.mustache
+++ b/bin/dartdocs_index.html.mustache
@@ -17,7 +17,7 @@
   <body>
     <!-- TODO(adam): remove after end of tech preview -->
     <p class="bg-danger text-center" style="padding: 0px; margin: 0px 0px 0px;">
-      <em><strong>Technology preview</strong></em>
+      <em><strong>Technology preview. Have a feature request? Send it over to the github <a href="https://github.com/financeCoding/dart-carte-du-jour/issues/new">project</a>.</strong></em>
     </p>  
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
