--- a/bin/dartdocs_latest_index.html.mustache
+++ b/bin/dartdocs_latest_index.html.mustache
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>www.dartdocs.org</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <script>
      var meta = document.createElement("meta");
      var hash=document.location.hash;
