--- a/lib/multi_package_startup_script.mustache
+++ b/lib/multi_package_startup_script.mustache
@@ -68,9 +68,11 @@ function setup_proxy () {
 
   source /etc/profile.d/proxy.sh
 }
-sed -i '1i Port 443' /etc/ssh/sshd_config 
-/etc/init.d/ssh restart
-setup_proxy
+# We dont need to listen on 443 anymore.. 22 should be just fine.
+# sed -i '1i Port 443' /etc/ssh/sshd_config
+# /etc/init.d/ssh restart
+# disable proxy
+# setup_proxy
 fetch_latest_dart_sdk
 sudo -E -H -u {{user_name}} bash -c 'cd ~/ && git clone https://github.com/{{user_name}}/dart-carte-du-jour.git'
 sudo -E -H -u {{user_name}} bash -c 'cd ~/ && gsutil cp gs://dart-carte-du-jour/configurations/config.json ~/dart-carte-du-jour/bin/config.json'
